# magic_get_test

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  main.cpp
